crates/es-fluent-manager-macros/src/snapshots/es_fluent_manager_macros__assets__tests__current_crate_name_reports_missing_env.snap
---
source: crates/es-fluent-manager-macros/src/assets.rs
expression: err.to_string()
---
CARGO_PKG_NAME must be set
