crates/es-fluent-manager-macros/src/snapshots/es_fluent_manager_macros__assets__tests__i18n_assets_load_discovers_languages_and_namespaces.snap
---
source: crates/es-fluent-manager-macros/src/assets.rs
expression: assets
---
I18nAssets {
    root_path: "<assets>",
    languages: [
        "en",
        "fr",
    ],
    domains: [
        (
            "my-crate",
            [
                "ui",
            ],
        ),
    ],
    resource_specs_by_language: [
        (
            "en",
            [
                ModuleResourceSpec {
                    key: ResourceKey(
                        "my-crate",
                    ),
                    locale_relative_path: LocaleRelativeFtlPath(
                        "my-crate.ftl",
                    ),
                    required: false,
                },
            ],
        ),
        (
            "fr",
            [
                ModuleResourceSpec {
                    key: ResourceKey(
                        "my-crate/ui",
                    ),
                    locale_relative_path: LocaleRelativeFtlPath(
                        "my-crate/ui.ftl",
                    ),
                    required: true,
                },
            ],
        ),
    ],
}
