crates/es-fluent-manager-macros/src/snapshots/es_fluent_manager_macros__assets__tests__i18n_assets_load_ignores_base_files_for_namespaced_locales.snap
---
source: crates/es-fluent-manager-macros/src/assets.rs
expression: assets
---
I18nAssets {
    root_path: "<assets>",
    languages: [
        "en",
    ],
    namespaces: [
        "ui",
    ],
    resource_specs_by_language: [
        (
            "en",
            [
                ResourceSpec {
                    key: "my-crate/ui",
                    locale_relative_path: "my-crate/ui.ftl",
                    required: true,
                },
            ],
        ),
    ],
}
