crates/es-fluent-manager-macros/src/snapshots/es_fluent_manager_macros__assets__tests__i18n_assets_load_keeps_base_files_optional_for_namespaced_locales.snap
---
source: crates/es-fluent-manager-macros/src/assets.rs
expression: assets
---
I18nAssets {
    root_path: "<assets>",
    languages: [
        "en",
    ],
    domains: [
        (
            "my-crate",
            [
                "ui",
            ],
        ),
    ],
    resource_specs_by_language: [
        (
            "en",
            [
                ModuleResourceSpec {
                    key: ResourceKey(
                        "my-crate",
                    ),
                    locale_relative_path: LocaleRelativeFtlPath(
                        "my-crate.ftl",
                    ),
                    required: false,
                },
                ModuleResourceSpec {
                    key: ResourceKey(
                        "my-crate/ui",
                    ),
                    locale_relative_path: LocaleRelativeFtlPath(
                        "my-crate/ui.ftl",
                    ),
                    required: true,
                },
            ],
        ),
    ],
}
