crates/es-fluent-manager-macros/src/snapshots/es_fluent_manager_macros__assets__tests__i18n_assets_load_rejects_noncanonical_locale_directories.snap
---
source: crates/es-fluent-manager-macros/src/assets.rs
expression: "normalize_temp_paths(&err.to_string(), temp.path())"
---
Locale directory 'en-us' under "<manifest-dir>/i18n/en-us" must use canonical BCP-47 form 'en-US'
