crates/es-fluent-manager-macros/src/snapshots/es_fluent_manager_macros__assets__tests__i18n_assets_load_reports_invalid_assets_directory.snap
---
source: crates/es-fluent-manager-macros/src/assets.rs
expression: "normalize_temp_paths(&err.to_string(), invalid_temp.path())"
---
Assets directory validation failed: Failed to read configuration file: Assets directory '<manifest-dir>/missing-assets' does not exist
