crates/es-fluent-manager-macros/src/snapshots/es_fluent_manager_macros__assets__tests__i18n_assets_load_reports_missing_configuration.snap
---
source: crates/es-fluent-manager-macros/src/assets.rs
expression: "normalize_temp_paths(&err.to_string(), missing_temp.path())"
---
No i18n.toml configuration file found in project root. Please create one with the required settings.
